--- a/index.html
+++ b/index.html
@@ -1,79 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Landing Page</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-  </head>
-  <body>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+</head>
+
+<body>
+    <section id="header">
     <header>
-      <div>
-        <div><img src="" alt="Header Logo" /></div>
         <div>
-          <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-          </ul>
+            <img src="/images/bugsnax_logo.webp" alt="Header Logo" class="logo" />
         </div>
-      </div>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
     </header>
+    </section>
+
 
     <section id="hero">
-      <div></div>
         <div>
-          <h1>This website is awesome</h1>
-          <p>
-            This website has some subtext that goes here under the main title.
-            It's a smaller font and the color is lower contrast.
-          </p>
-          <a href="#" class="btn btn-main">Sign up</a>
+        <div>
+            <h1>This is a Strabby fansite</h1>
+            <p>
+                This website has some subtext that goes here under the main title.
+                It's a smaller font and the color is lower contrast.
+            </p>
+            <a href="#" class="btn btn-primary">Sign up</a>
         </div>
-        <div><img src="" alt="Placeholder image" /></div>
-      </div>
+        <div><img src="/images/bugsnax.png" alt="Placeholder image" /></div>
+    </div>
     </section>
 
     <section id="usp">
-      <h2>Some random information</h2>
+        <h2>Some random information</h2>
 
-      <div>
         <div>
-          <img src="" alt="USP 1" />
-          <p>This is some subtext under an illustration or image</p>
+            <div>
+                <img src="/images/usp_banooper.webp" alt="USP 1" />
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="/images/usp_bunger.webp" alt="USP 2" />
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="/images/usp_strabby.webp" alt="USP 3" />
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img src="/images/usp_weenyworm.webp" alt="USP 4" />
+                <p>This is some subtext under an illustration or image</p>
+            </div>
         </div>
-        <div>
-          <img src="" alt="USP 2" />
-          <p>This is some subtext under an illustration or image</p>
-        </div>
-        <div>
-          <img src="" alt="USP 3" />
-          <p>This is some subtext under an illustration or image</p>
-        </div>
-        <div>
-          <img src="" alt="USP 4" />
-          <p>This is some subtext under an illustration or image</p>
-        </div>
-      </div>
     </section>
 
     <section id="testimonial">
-        <p>This is an inpsiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p>This is an inpsiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+            people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p>- Thor, God of Thunder</p>
     </section>
 
     <section id="cta">
         <div>
             <div>
-            <h4>Call to action! It's time!</h4>
-            <p>Sign up for our product by clicking that button right over there!</p>
+                <h4>Call to action! It's time!</h4>
+                <p>Sign up for our product by clicking that button right over there!</p>
             </div>
             <a href="#" class="btn btn-secondary">Sign up</a>
         </div>
     </section>
-  </body>
+</body>
+
 </html>
