Add all sections

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
     <section id="header">
     <header>
-        <div>
+        <a href="">
             <img src="/images/bugsnax_logo.webp" alt="Header Logo" class="logo" />
-        </div>
+        </a>
             <ul>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
@@ -34,52 +34,57 @@
         <div>
             <h1>This is a Strabby fansite</h1>
             <p>
-                This website has some subtext that goes here under the main title.
-                It's a smaller font and the color is lower contrast.
+                Kinda bug and kinda snack, try to catch them in your trap! Feed somebody and you'll see we are whatever we eat.
             </p>
-            <a href="#" class="btn btn-primary">Sign up</a>
+            <a href="#" class="btn btn-primary">Feed me!</a>
         </div>
         <div><img src="/images/bugsnax.png" alt="Placeholder image" /></div>
     </div>
     </section>
 
     <section id="usp">
-        <h2>Some random information</h2>
+        <h2>Some snackalicious information</h2>
 
         <div>
             <div>
                 <img src="/images/usp_banooper.webp" alt="USP 1" />
-                <p>This is some subtext under an illustration or image</p>
+                <p>Banoppers leap from tree to tree to find shelter from the cold!</p>
             </div>
             <div>
                 <img src="/images/usp_bunger.webp" alt="USP 2" />
-                <p>This is some subtext under an illustration or image</p>
+                <p>Bunger's two curled horns make it strongly resemble the New Guinea Stag Beetle</p>
             </div>
             <div>
                 <img src="/images/usp_strabby.webp" alt="USP 3" />
-                <p>This is some subtext under an illustration or image</p>
+                <p>Strabby is inspired by ladybugs as well as aphids</p>
             </div>
             <div>
                 <img src="/images/usp_weenyworm.webp" alt="USP 4" />
-                <p>This is some subtext under an illustration or image</p>
+                <p>While based on an earthworm, Weenyworm's general shape coincidentally resembles that of a scale worm.</p>
             </div>
         </div>
     </section>
 
     <section id="testimonial">
-        <p>This is an inpsiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
-            people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p>- Thor, God of Thunder</p>
+        <p class="quote">I heard that somewhere far off in the ocean, there lies an island where the creatures roam. A famed explorer tells me they're delicious and yet they're hitherto unknown.</p>
+        <p class="person">- Kero Kero Bonito</p>
     </section>
 
     <section id="cta">
         <div>
             <div>
-                <h4>Call to action! It's time!</h4>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <h4>Come to Snaktooth Island!</h4>
+                <p>Sign up for a tour and come see Strabby in real life!</p>
             </div>
             <a href="#" class="btn btn-secondary">Sign up</a>
         </div>
+    </section>
+
+
+    <section id="footer">
+        <footer>
+            <p>Copyright © Young Horses 2022</p>
+        </footer>
     </section>
 </body>
 
