Media queries and added links

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body>
     <section id="header">
     <header>
-        <a href="">
+        <a href="#">
             <img src="/images/bugsnax_logo.webp" alt="Header Logo" class="logo" />
         </a>
             <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="#usp">Features</a></li>
+                <li><a href="#testimonial">Testimonial</a></li>
+                <li><a href="#cta">Sign Up</a></li>
             </ul>
     </header>
     </section>
