Fix image url and page title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Odin Landing Page</title>
+    <title>Bugsnax Landing Page</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
     <section id="header">
     <header>
         <a href="#">
-            <img src="/images/bugsnax_logo.webp" alt="Header Logo" class="logo" />
+            <img src="images/bugsnax_logo.webp" alt="Header Logo" class="logo" />
         </a>
             <ul>
                 <li><a href="#usp">Features</a></li>
@@ -38,7 +38,7 @@
             </p>
             <a href="#" class="btn btn-primary">Feed me!</a>
         </div>
-        <div><img src="/images/bugsnax.png" alt="Placeholder image" /></div>
+        <div><img src="images/bugsnax.png" alt="Placeholder image" /></div>
     </div>
     </section>
 
@@ -47,19 +47,19 @@
 
         <div>
             <div>
-                <img src="/images/usp_banooper.webp" alt="USP 1" />
+                <img src="images/usp_banooper.webp" alt="USP 1" />
                 <p>Banoppers leap from tree to tree to find shelter from the cold!</p>
             </div>
             <div>
-                <img src="/images/usp_bunger.webp" alt="USP 2" />
+                <img src="images/usp_bunger.webp" alt="USP 2" />
                 <p>Bunger's two curled horns make it strongly resemble the New Guinea Stag Beetle</p>
             </div>
             <div>
-                <img src="/images/usp_strabby.webp" alt="USP 3" />
+                <img src="images/usp_strabby.webp" alt="USP 3" />
                 <p>Strabby is inspired by ladybugs as well as aphids</p>
             </div>
             <div>
-                <img src="/images/usp_weenyworm.webp" alt="USP 4" />
+                <img src="images/usp_weenyworm.webp" alt="USP 4" />
                 <p>While based on an earthworm, Weenyworm's general shape coincidentally resembles that of a scale worm.</p>
             </div>
         </div>
